初步完成文件分组对比,快速定位小文件,小文件内容比较
